welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:String = "Gris"
    avance()
   
    
    
        return couleur
}        
